@@ -27,7 +27,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -59,6 +58,10 @@ public class DelayedOperationPurgatory<T extends DelayedOperation> {
         this(purgatoryName, timer, brokerId, 1000, reaperEnabled, true);
     }
 
+    public DelayedOperationPurgatory(String purgatoryName, Timer timer, int brokerId, int purgeInterval) {
+        this(purgatoryName, timer, brokerId, purgeInterval, true, true);
+    }
+
     public DelayedOperationPurgatory(String purgatoryName, int brokerId) {
         this(purgatoryName, brokerId, 1000);
     }
@@ -88,7 +91,7 @@ public class DelayedOperationPurgatory<T extends DelayedOperation> {
         for (int i = 0; i < SHARDS; i++) {
             watcherLists.add(new WatcherList());
         }
-        metricsTags = Collections.singletonMap("delayedOperation", purgatoryName);
+        metricsTags = Map.of("delayedOperation", purgatoryName);
         metricsGroup.newGauge("PurgatorySize", this::watched, metricsTags);
         metricsGroup.newGauge("NumDelayedOperations", this::numDelayed, metricsTags);
         if (reaperEnabled) {
@@ -223,7 +226,7 @@ public class DelayedOperationPurgatory<T extends DelayedOperation> {
             if (watchers != null)
                 return watchers.cancel();
             else
-                return Collections.emptyList();
+                return List.of();
         } finally {
             wl.watchersLock.unlock();
         }
